add archive and latest post to landing page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav class="u-full-width">
   <div class="name"><a href="{{ site.baseurl }}/" {% include selected_nav.html permalink="/" %}>AyMeeko</a></div>
   <ul>
-    <li><a href="{{ site.baseurl }}/blog" {% include selected_nav.html permalink="/blog/" %}>Blog</a></li>
+    <li><a href="{{ site.baseurl }}/blog" {% include selected_nav.html permalink="/blog/" %}>Archives</a></li>
   </ul>
 </nav>
