--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,5 +2,8 @@
   <ul>
     <li><a href="mailto:aymeeko13@gmail.com"><i class="fas fa-envelope fa-lg"></i></a></li>
     <li><a href="https://github.com/aymeeko"><i class="fab fa-github fa-lg"></i></a></li>
+	{% if page.selected_nav == '/blog/' or layout.selected_nav == '/blog/' %}
+		<li><a href="/archive/"><i class="fas fa-list fa-lg"></i></a></li>
+	{% endif%}
   </ul>
 </footer>
