--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,8 @@
 <nav class="u-full-width">
-  <div class="name"><a href="{{ site.baseurl }}/" {% include selected_nav.html permalink="/" %}>AyMeeko</a></div>
+  <h1 class="name"><a href="{{ site.baseurl }}/" {% include selected_nav.html permalink="/" %}>AyMeeko</a></h1>
   <ul>
-    <li><a href="{{ site.baseurl }}/blog" {% include selected_nav.html permalink="/blog/" %}>Archives</a></li>
+    <h4>
+	  <li><a href="{{ site.baseurl }}/blog" {% include selected_nav.html permalink="/blog/" %}>Archives</a></li>
+    </h4>
   </ul>
 </nav>
