--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -1,22 +1,19 @@
 // Overall
-$background: #EEE9F2;
-$hr: rgb(183, 100, 229);
+$background: #24273a;
+$hr: #494d64;
+
+$header_font: 'Francois One', sans-serif;
+$body_font: 'Lato';
+
+$text: #cad3f5;
+$link: #ee99a0;
+$hover_link: #8bd5ca;
 
 // Navigation
-$nav_link: rgb(30, 3, 45);
-$nav_hover_link: $nav_link;
-$nav_border_bottom_link_selected: rgb(78, 15, 112);
+$nav_border_bottom_link_selected: #8aadf4;
 $nav_border_bottom_link_hover: $hr;
 
 // Blog contents
-$ul_li_link: rgb(78, 15, 112);
-$link: rgb(78, 15, 112);
-$hover_link: rgb(183, 100, 229);
-$text: rgb(30, 3, 45);
-$ol_li_background: #313FAD;
-$ol_li_foreground: white;
-$gen_info_right_border: black;
-$header_color: rgb(78,15,112);
-
-$header_font: 'Francois One';
-$body_font: 'Lato';
+$code_background: #181926;
+$code_font: "JetBrains Mono", monospace;
+$list_item_marker: #ee99a0;
