--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,7 @@
   <ul>
     <li><a href="mailto:aymeeko13@gmail.com"><i class="fas fa-envelope fa-lg"></i></a></li>
     <li><a href="https://github.com/aymeeko"><i class="fab fa-github fa-lg"></i></a></li>
+	<li><a href="https://twitter.com/AyMeeko"><i class="fab fa-twitter"></i></a></li>
 	{% if page.selected_nav == '/blog/' or layout.selected_nav == '/blog/' %}
 		<li><a href="/archive/"><i class="fas fa-list fa-lg"></i></a></li>
 	{% endif%}
