--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -1,19 +1,5 @@
-// Overall
-$background: #24273a;
-$hr: #494d64;
-
 $header_font: 'Francois One', sans-serif;
-$body_font: 'Lato';
-
-$text: #cad3f5;
-$link: #ee99a0;
-$hover_link: #8bd5ca;
-
-// Navigation
-$nav_border_bottom_link_selected: #8aadf4;
-$nav_border_bottom_link_hover: $hr;
+$body_font: 'Lato', sans-serif;
 
 // Blog contents
-$code_background: #181926;
 $code_font: "JetBrains Mono", monospace;
-$list_item_marker: #ee99a0;
