fixed footer width; change archive->blog

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -64,7 +64,7 @@ footer {
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
-    list-style: none;
+    width: 192px;
 
     @include link;
   }
