--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
   <h1 class="name"><a href="{{ site.baseurl }}/" {% include selected_nav.html permalink="/" %}>AyMeeko</a></h1>
   <ul>
     <h4>
-	  <li><a href="{{ site.baseurl }}/blog" {% include selected_nav.html permalink="/blog/" %}>Archives</a></li>
+	  <li><a href="{{ site.baseurl }}/blog" {% include selected_nav.html permalink="/blog/" %}>Blog</a></li>
     </h4>
   </ul>
 </nav>
